IRL flying arena setup changes
- Updated motion capture to use Vicon w/ hostname
- Added CF{1, 3, 4, 8, 10} to \`crazyflies.yaml\`
- Tweaked ICP dynamics configuration to be more generous

--- a/crazyflie/config/crazyflies.yaml
+++ b/crazyflie/config/crazyflies.yaml
@@ -1,56 +1,43 @@
 # named list of all robots
 robots:
-  cf231:
-    enabled: true
-    uri: radio://0/80/2M/E7E7E7E7E7
+  cf01:
+    enabled: true 
+    uri: radio://0/100/2M/E7E7E7E701
     initial_position: [0, 0, 0]
-    type: cf21  # see robot_types
-    # firmware_params:
-    #   kalman:
-    #     pNAcc_xy: 1.0 # default 0.5
-    # firmware_logging:
-    #   enabled: true
-    #   custom_topics:
-    #     topic_name3: 
-    #       frequency: 1
-    #       vars: ["acc.x", "acc.y"]
-  cf5:
-    enabled: false
-    uri: radio://0/80/2M/E7E7E7E705
-    initial_position: [0, -0.5, 0]
-    type: cf21  # see robot_types
-    # firmware_params:
-    #   kalman:
-    #     pNAcc_xy: 1.0 # default 0.5
-    #firmware_logging:
-    #  custom_topics:
-    #    topic_name3: 
-    #      frequency: 1
-    #      vars: ["acc.x", "acc.y", "acc.z"]
+    type: cf21
+  cf03:
+    enabled: false 
+    uri: radio://0/100/2M/E7E7E7E703
+    initial_position: [0, 0, 0]
+    type: cf21
+  cf04:
+    enabled: false 
+    uri: radio://0/100/2M/E7E7E7E704
+    initial_position: [0, 0, 0]
+    type: cf21
+  cf08:
+    enabled: false 
+    uri: radio://0/100/2M/E7E7E7E708
+    initial_position: [0, 0, 0]
+    type: cf21
+  cf10:
+    enabled: false 
+    uri: radio://0/100/2M/E7E7E7E70A
+    initial_position: [0, 0, 0]
+    type: cf21
+
 # Definition of the various robot types
 robot_types:
   cf21:
     motion_capture:
       enabled: true
       # only if enabled; see motion_capture.yaml
-      marker: default_single_marker
+      marker: icon 
       dynamics: default
     big_quad: false
     battery:
       voltage_warning: 3.8  # V
       voltage_critical: 3.7 # V
-    # firmware_params:
-    #   kalman:
-    #     pNAcc_xy: 1.0 # default 0.5
-    #firmware_logging:
-    #   enabled: true
-    #   default_topics:
-    #   pose:
-    #     frequency: 1 # Hz
-    #   custom_topics:
-    #    topic_name3: 
-    #      frequency: 1
-    #      vars: ["acc.x", "acc.y", "acc.z"]
 
   cf21_mocap_deck:
     motion_capture:
@@ -62,10 +49,6 @@ robot_types:
     battery:
       voltage_warning: 3.8  # V
       voltage_critical: 3.7 # V
-
-    # firmware_params:
-    #   kalman:
-    #     pNAcc_xy: 1.0 # default 0.5
 
 # global settings for all robots
 all:
@@ -92,17 +75,17 @@ all:
     stabilizer:
       estimator: 2 # 1: complementary, 2: kalman
       controller: 2 # 1: PID, 2: mellinger
-    # ring:
-    #   effect: 16 # 6: double spinner, 7: solid color, 16: packetRate
-    #   solidBlue: 255 # if set to solid color
-    #   solidGreen: 0 # if set to solid color
-    #   solidRed: 0 # if set to solid color
-    #   headlightEnable: 0
+    ring:
+      effect: 16 # 6: double spinner, 7: solid color, 16: packetRate
+      solidBlue: 255 # if set to solid color
+      solidGreen: 0 # if set to solid color
+      solidRed: 0 # if set to solid color
+      headlightEnable: 0
     locSrv:
       extPosStdDev: 1e-3
       extQuatStdDev: 0.5e-1
-    # kalman:
-    #   resetEstimation: 1
+    kalman:
+      resetEstimation: 1
   broadcasts:
     num_repeats: 15 # number of times broadcast commands are repeated
     delay_between_repeats_ms: 1 # delay in milliseconds between individual repeats
